--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -r dist",
     "build": "tsc",
     "watch": "tsc --watch",
+    "dev": "NODE_ENV=dev ts-node .",
     "start": "\"$NODE\" --inspect dist/index.js",
     "lint": "eslint src --ext .js,.ts --ignore-path .gitignore"
   },
@@ -27,9 +28,12 @@
   },
   "homepage": "https://github.com/lexisother/LemuriaBot#readme",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "glob": "^7.1.6",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/node": "^14.14.41",
     "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
