--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "module": "CommonJS",
         "target": "ES2019",
         "strict": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "esModuleInterop": true
     }
 }
