--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -r dist",
     "build": "tsc",
-    "watch": "tsc --watch",
+    "watch": "tsc-watch --onSuccess \"node . dev\"",
     "dev": "NODE_ENV=dev ts-node .",
     "start": "\"$NODE\" --inspect dist/index.js",
     "lint": "eslint src --ext .js,.ts --ignore-path .gitignore"
@@ -29,8 +29,7 @@
   "homepage": "https://github.com/lexisother/LemuriaBot#readme",
   "dependencies": {
     "discord.js": "^12.5.3",
-    "glob": "^7.1.6",
-    "ts-node": "^9.1.1"
+    "glob": "^7.1.6"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -41,6 +40,8 @@
     "eslint": "^7.24.0",
     "eslint-config-dmitmel": "github:dmitmel/eslint-config-dmitmel",
     "eslint-plugin-node": "^11.1.0",
+    "ts-node": "^9.1.1",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.2.4"
   }
 }
