--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "watch": "tsc-watch --onSuccess \"node . dev\"",
     "dev": "NODE_ENV=dev ts-node .",
     "start": "\"$NODE\" --inspect dist/index.js",
-    "lint": "eslint src --ext .js,.ts --ignore-path .gitignore"
+    "lint": "eslint src --ext .js,.ts --ignore-path .gitignore",
+    "format": "prettier --write **/*",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,8 @@
     "eslint": "^7.24.0",
     "eslint-config-dmitmel": "github:dmitmel/eslint-config-dmitmel",
     "eslint-plugin-node": "^11.1.0",
+    "husky": "^6.0.0",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.4"
