[Commands] Rewrote command handler
Co-authored-by: フズキ <hades785@gmail.com>

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,10 +8,7 @@ settings:
 
 rules:
   node/no-unpublished-import: off
-  node/no-unsupported-features/es-syntax:
-    - error
-    - ignores:
-        - modules
+  node/no-unsupported-features/es-syntax: off
 
 overrides:
   - files: '**/*.ts'
