[Meta] Switched to pnpm

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
               with:
                   node-version: "15.x"
 
+            - name: Install pnpm
+              run: npm i -g pnpm
+
             - uses: actions/cache@v2
               with:
                   path: |
@@ -36,10 +39,10 @@ jobs:
                       ${{ runner.os }}-eslint-
 
             - name: Install dependencies
-              run: npm i
+              run: pnpm i
 
             - name: Build codebase
-              run: mv src/config.example.ts src/config.ts && npm run build
+              run: mv src/config.example.ts src/config.ts && pnpm run build
 
             - name: Run ESLint
-              run: npm run lint --cache
+              run: pnpm run lint -- --cache
